# BeamMP-Launcher

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-linux.yml  cmake-windows.yml
include/: Options.h
include/Network/: network.hpp
src/: Config.cpp  Options.cpp  Startup.cpp
src/Network/: Core.cpp  GlobalHandler.cpp  Resources.cpp  VehicleEvent.cpp
src/Security/: BeamNG.cpp  Login.cpp
